[package]
name = "deno_npm_emit"
version = "0.0.1"
edition = "2024"
description = "npm module transpiling and emitting for deno"
homepage = "https://github.com/kingsword09"
repository = "https://github.com/kingsword09/deno_npm_emit"
authors = ["Kingsword"]
license = "MIT"

[dependencies]
# deno_ast = { workspace = true }
# deno_graph = { workspace = true }
deno_npm = { workspace = true }
deno_npm_cache = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
