[package]
name = "deno_npm_emit_wasm"
version = "0.0.0"
edition = "2024"
description = "npm module transpiling and emitting for deno"
homepage = "https://deno.land/"
repository = "https://github.com/kingsword09/deno_npm"
authors = ["Kingsword"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "npm_emit"

[dependencies]
# anyhow = { workspace = true }
# base64 = { workspace = true }
deno_npm = { workspace = true }
deno_npm_cache = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
